# flakes

./: .gitignore  LICENSE  README.md  flake.nix
default/: flake.nix
rust/: .gitignore  flake.nix
shells/: c.nix  default.nix  haskell.nix  lua.nix  nix.nix  rust.nix
templates/default/: flake.nix
templates/default/nix/: default.nix  package.nix  shell.nix
templates/haskell/: .gitignore  flake.nix  haskell.cabal
templates/haskell/nix/: default.nix  overrides.nix  shell.nix
templates/meta/: README.md
templates/nixos/: default.nix  flake.nix
templates/rust/: .gitignore  Cargo.toml  flake.nix  rustfmt.toml
templates/rust/nix/: default.nix  package.nix  shell.nix
templates/typst/: flake.nix  main.typ
templates/typst/nix/: default.nix  package.nix  shell.nix
