cabal-version: 3.0
name:          haskell
version:       0.1.0.0
author:        Baraa Homsi
maintainer:    baraa.homsi@proton.me
build-type:    Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        haskell

    hs-source-dirs:   app
    default-language: Haskell2010
