cabal-version: 3.4
name:          haskell
version:       0.1.0.0
build-type:    Simple

common common
  default-language: Haskell2010
  ghc-options:      -Wall

library
  import:          common
  exposed-modules: MyLib
  hs-source-dirs:  src
  build-depends:   base >=4.19.2.0

executable haskell
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base     >=4.19.2.0
    , haskell
